fix overflow
body overflow-x
.content1 img ml (t)

--- a/css/home.css
+++ b/css/home.css
@@ -104,7 +104,7 @@
 @media screen and (min-width: 768px) and (max-width: 1919px) {
   .content1 #courses {
     width: 76.7%;
-    margin-right: min(-60px, (824px - 100vw) / 2);
+    margin-right: calc((100% - 100vw) / 2);
     margin-left: -11%;
   }
 }
